fixed spacing on form

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,7 +112,7 @@ button {
   font-family: 'Arvo', serif;
   font-size: 1.5vw;
   line-height: 3vw;
-  margin: 15% 0 5% 7.5vw;
+  margin: 15% 0 5% 13vw;
   width: 20vw;
   color: rgba(0, 0, 0, 0.798);
 }
